<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_select_location"
            android:icon="@drawable/ic_location"
            android:title="@string/tab_select_location" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_shield_check"
            android:title="@string/nav_support" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_privacy"
            android:title="@string/legal_title" />
        <item
            android:id="@+id/nav_disclaimer"
            android:icon="@drawable/ic_privacy"
            android:title="@string/disclaimer_title" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about_title" />
    </group>
</menu>
